; ModuleID = '/home/carl/AnghaBench/vlc/src/win32/extr_dirs.c_config_GetShellDir.c'
source_filename = "/home/carl/AnghaBench/vlc/src/win32/extr_dirs.c_config_GetShellDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@CSIDL_FLAG_CREATE = common dso_local global i32 0, align 4
@SHGFP_TYPE_CURRENT = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @config_GetShellDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @config_GetShellDir(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* @MAX_PATH, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %4, align 8
  %10 = alloca i32, i64 %8, align 16
  store i64 %8, i64* %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @CSIDL_FLAG_CREATE, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @SHGFP_TYPE_CURRENT, align 4
  %15 = call i64 @SHGetFolderPathW(i32* null, i32 %13, i32* null, i32 %14, i32* %10)
  %16 = load i64, i64* @S_OK, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %1
  %19 = call i8* @FromWide(i32* %10)
  store i8* %19, i8** %2, align 8
  store i32 1, i32* %6, align 4
  br label %21

20:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  store i32 1, i32* %6, align 4
  br label %21

21:                                               ; preds = %20, %18
  %22 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %22)
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @SHGetFolderPathW(i32*, i32, i32*, i32, i32*) #2

declare dso_local i8* @FromWide(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
